<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Blocktopograph</string>
    <string name="brand_sub">By @protolambda</string>
    <string name="title_worlditem_list">Select a world</string>
    <string name="title_worlditem_detail">World</string>
    <string name="title_activity_world">World</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_help">Help</string>
    <string name="action_changelog">Changelog</string>
    <string name="no_sdcard_access">Cannot open worlds, no read/write access on storage!
        Try restarting the app and accept the read/write permission request.</string>
    <string name="no_custom_markers_title">No custom markers!</string>
    <string name="no_custom_markers">There are no custom markers yet! \n
        You can create one by long-tapping on the place on the map where you want a marker,
            then tap \"Create custom marker\".
        Then choose a marker icon and a Y-coordinate.
        And then check if you can find it here!</string>
    <string name="app_about">
        This app is created by <a href="http://twitter.com/protolambda">@protolambda</a>. \n
        More information (including the roadmap, changelog and help-information) can be found at:
        <a href="http://blocktopograph.protolambda.com">blocktopograph.protolambda.com</a>. \n
        \n
        Please make a backup of all your loved MCPE worlds in case of data-corruption!\n
        NOTE: Minecraft might not load a whole world because of a single corrupt chunk of NBT!\n
        \n
            This app is built and tested for MCPE 1.1.0 (beta), 1.0.x, 0.16.x, 0.15.x, and 0.14.x\n
            Older MCPE versions are not supported.\n
        \n
        \n
        <i>Disclaimer</i>\n
        <b>This app is not affiliated with Minecraft, Mojang AB or Microsoft.</b>\n
        This is not an official but a fan made app.\n
        Minecraft is a trademark of Mojang AB.\n
        Please note:\n
            &#8226; NOT AN OFFICIAL MINECRAFT PRODUCT. NOT APPROVED BY OR ASSOCIATED WITH MOJANG.\n
            &#8226; THE APP IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND.\n
        \n
        \n
        <i>Used libraries</i>\n
        &#8226; <a href="https://github.com/Clans/FloatingActionButton">FloatingActionButton</a> \n
        &#8226; <a href="https://github.com/protolambda/TileView">
                    Tileview, fork by protolambda</a> \n
        &#8226; <a href="https://github.com/Mojang/leveldb-mcpe">leveldb-mcpe</a> \n
            with <a href="https://github.com/protolambda/android-leveldb">
                    android-leveldb, fork by protolambda</a> \n
        \n
        <i>Source code on GitHub:</i>\n
        <a href="https://github.com/protolambda/blocktopograph">github.com/protolambda/blocktopograph</a> \n

    </string>
    <string name="app_help">The app documentation can be found at:
        <a href="http://blocktopograph.protolambda.com/help">
            blocktopograph.protolambda.com/help
        </a>.
    </string>
    <string name="app_changelog" formatted="false">
        Version: <xliff:g id="version" example="0.0.1">%1$s</xliff:g>
        <![CDATA[<br/><br/>
        Full changelog can be found at:
        <a href="http://blocktopograph.protolambda.com/changelog">
            blocktopograph.protolambda.com/changelog
        </a>]]>
    </string>
    <string name="world_seed_prefix">World seed:</string>
    <string name="map_water_mark">Blocktopograph</string>
    <string name="create_marker_info">
        Marker icons:\n
        &#8226; default_marker, blue_marker, green_marker, red_marker \n
        &#8226; Entity data-names (case sensitive) \n
        &#8226; Block data-names (case sensitive) \n
    </string>
    <string name="reloaded_world_list">Reloaded world list.</string>
    <string name="could_not_find_worlds">Could not find any worlds!</string>
    <string name="no_read_write_access">No read/write access to worlds.</string>
    <string name="storage_path_here">Storage path here…</string>
    <string name="open_world_custom_path">Open world with custom path</string>
    <string name="open">Open</string>
    <string name="report_path_and_previous_search" formatted="false">
        Your path: <xliff:g id="file_path"
        example="/storage/emulated/0/games/com.mojang/minecraftWorlds/worldName">%1$s</xliff:g>\n
        \n
        Already searched for world folders in <xliff:g id="file_path"
        example="/storage/emulated/0/games/com.mojang/minecraftWorlds/">%2$s</xliff:g></string>
    <string name="no_file_folder_found_at_path">No file/folder found at path!</string>
    <string name="worldpath_is_not_directory">
        That path (optionally suffixed with /level.dat) is not a directory!</string>
    <string name="no_level_dat_found">No level.dat file found!</string>
    <string name="error_opening_world">An error occurred while opening the world.</string>
    <string name="ask_close_world">Do you want to close this world?</string>
    <string name="leveldb_key_here">levelDB key here…</string>
    <string name="open_nbt_from_db">Open NBT from DB</string>
    <string name="invalid_keyname">Invalid key name.</string>
    <string name="cannot_find_db_entry_with_name">Cannot find db entry with that name!</string>
    <string name="failed_to_read_x_from_db" formatted="false">
        Failed to read \"<xliff:g id="some_db_key" example="very_long_DB_key">%1$s</xliff:g>\"
            from world database.</string>
    <string name="no_multiplayer_data_found">No multiplayer data found.</string>
    <string name="select_player">Select player</string>
    <string name="open_nbt">Open NBT</string>
    <string name="failed_read_player_from_db_with_key_x">Failed to open player entry in DB. key:
        <xliff:g id="player_db_key" example="player_123456790">%1$s</xliff:g></string>
    <string name="error_cannot_open_world_close_and_try_again">
        The current Minecraft world could not be opened.
        Try restarting this app, and close the world in MCPE if it was open.</string>
    <string name="confirm_close_world">Do you want to close this world?</string>
    <string name="confirm_close_nbt_editor">Do you really want to close this NBT editor?</string>
    <string name="teleport_local_player">Teleport local player</string>
    <string name="create_custom_marker">Create custom marker</string>
    <string name="remove_custom_marker">Remove marker</string>
    <string name="open_chunk_entity_nbt">Open chunk entity NBT</string>
    <string name="open_chunk_tile_entity_nbt">Open chunk tile-entity NBT</string>
    <string name="entity_chunk_data">Entity chunk data</string>
    <string name="tile_entity_chunk_data">Tile-entity chunk data</string>
    <string name="nbt_chunk_data">NBT chunk data</string>
    <string name="marker_info" formatted="false">
        <xliff:g id="marker_displayname" example="My awesome marker">%1$s</xliff:g>
        ~ <xliff:g id="marker_dataname" example="blue_marker">%2$s</xliff:g>
        (<xliff:g id="x_coordinate" example="123.45">%3$d</xliff:g>;
        <xliff:g id="y_coordinate" example="42.122333">%4$d</xliff:g>;
        <xliff:g id="z_coordinate" example="-123.987">%5$d</xliff:g>)
        [<xliff:g id="dimension" example="Overworld">%6$s</xliff:g>].</string>
    <string name="teleported_player_to_xyz_dim" formatted="false">Teleported the player to:
        (<xliff:g id="x_coordinate" example="123.45">%1$.2f</xliff:g>;
        <xliff:g id="y_coordinate" example="42.122333">%2$.2f</xliff:g>;
        <xliff:g id="z_coordinate" example="-123.987">%3$.2f</xliff:g>)
        [<xliff:g id="dimension" example="Overworld">%4$s</xliff:g>].</string>
    <string name="failed_teleporting_player">Failed to teleport player.</string>
    <string name="failed_to_find_or_edit_local_player_data">
        Failed to find/edit local player data.</string>
    <string name="default_custom_marker_name">My custom marker</string>
    <string name="marker_invalid_name">Invalid marker name!</string>
    <string name="invalid_icon_name">Invalid icon name!</string>
    <string name="invalid_x_coordinate">Invalid marker X coordinate!</string>
    <string name="invalid_y_coordinate">Invalid marker Y coordinate!</string>
    <string name="invalid_z_coordinate">Invalid marker Z coordinate!</string>
    <string name="failed_to_create_marker">Error: failed to create marker.</string>
    <string name="failed_to_load_x" formatted="false">
        Failed to load <xliff:g id="some_data" example="some data">%1$s</xliff:g>.
    </string>
    <string name="nbt_editor">NBT editor</string>
    <string name="data_does_not_exist_for_chunk_ask_if_create">
        This type of data does not yet exist for this chunk.
        It needs to exist first, do you want to create it?</string>
    <string name="creating_and_saving_chunk_NBT_data">
        Creating and saving new NBT chunk data…</string>
    <string name="created_and_saved_chunk_NBT_data">
        Created and saved new NBT chunk data!</string>
    <string name="failed_to_create_or_save_chunk_NBT_data">
        Error: failed to create/save the new NBT chunk data.</string>
    <string name="full_date_format">dd/MM/yyyy hh:mm a</string>
    <string name="error_could_not_open_world_details_lost_track_world">
        Error: could not open world details; lost track of world.</string>
    <string name="error_could_not_open_world">Error: could not open world.</string>
    <string name="no_level_data_available">no level-data available</string>
    <string name="worldlist_detail_world_name">World name:</string>
    <string name="worldlist_detail_world_size">World size:</string>
    <string name="worldlist_detail_gamemode">Game mode:</string>
    <string name="worldlist_detail_last_played">Last play:</string>
    <string name="worldlist_detail_world_seed">World seed:</string>
    <string name="worldlist_detail_file_path">File path:</string>
    <string name="loading_world">Loading world…</string>
    <string name="x_is_invalid" formatted="false">
        \"<xliff:g id="something_invalid" example="something">%1$s</xliff:g>\" is invalid!</string>
    <string name="filter_markers">Filter markers</string>
    <string name="show_map">Show map</string>
    <string name="select_world">Select world</string>
    <string name="singleplayer_nbt">Singleplayer NBT</string>
    <string name="multiplayer_nbt">Multiplayer NBT</string>
    <string name="world_nbt">World NBT</string>
    <string name="overworld">Overworld</string>
    <string name="satellite">Satellite</string>
    <string name="cave">Cave</string>
    <string name="slime_chunks">Slime-chunks</string>
    <string name="heightmap">Heightmap</string>
    <string name="biomes">Biomes</string>
    <string name="foliage_color">Foliage color</string>
    <string name="x_ray">X-Ray</string>
    <string name="light">Light</string>
    <string name="nether">Nether</string>
    <string name="map">Map</string>
    <string name="the_end">The End</string>
    <string name="map_options">Map options</string>
    <string name="toggle_grid">Toggle grid</string>
    <string name="toggle_markers">Toggle markers</string>
    <string name="advanced_options">Advanced Options</string>
    <string name="biomedata_nbt">BiomeData NBT</string>
    <string name="overworld_nbt">Overworld NBT</string>
    <string name="villages_nbt">Villages NBT</string>
    <string name="portals_nbt">Portals NBT</string>
    <string name="dimension0_nbt">dimension0 NBT</string>
    <string name="dimension1_nbt">dimension1 NBT</string>
    <string name="dimension2_nbt">dimension2 NBT</string>
    <string name="autonomousentities_nbt">AutonomousEntities NBT</string>
    <string name="open_nbt_by_name">Open NBT by name</string>
</resources>