<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_world_show_map"
            android:icon="@drawable/ic_action_map_b"
            android:title="@string/show_map" />
        <item
            android:id="@+id/nav_world_select"
            android:icon="@drawable/ic_action_exit"
            android:title="@string/select_world" />
        <item
            android:id="@+id/nav_singleplayer_nbt"
            android:icon="@drawable/ic_person"
            android:title="@string/singleplayer_nbt" />
        <item
            android:id="@+id/nav_multiplayer_nbt"
            android:icon="@drawable/ic_people"
            android:title="@string/multiplayer_nbt" />
        <!--<item
            android:id="@+id/nav_inventory"
            android:icon="@drawable/ic_inventory"
            android:title="Inventory" />-->
        <item
            android:id="@+id/nav_world_nbt"
            android:icon="@drawable/ic_action_settings"
            android:title="@string/world_nbt" />
        <!--<item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools" />-->
    </group>

    <group android:checkableBehavior="none">
        <item android:title="@string/overworld">
            <menu>
                <item
                    android:id="@+id/nav_overworld_satellite"
                    android:icon="@drawable/ic_satellite"
                    android:title="@string/satellite" />
                <item
                    android:id="@+id/nav_overworld_cave"
                    android:icon="@drawable/ic_broken_image"
                    android:title="@string/cave" />
                <!--<item
                    android:id="@+id/nav_overworld_debug"
                    android:icon="@drawable/ic_terrain"
                    android:title="Debug" />-->
                <item
                    android:id="@+id/nav_overworld_slime_chunk"
                    android:icon="@drawable/ic_action_puzzle"
                    android:title="@string/slime_chunks" />
                <item
                    android:id="@+id/nav_overworld_heightmap"
                    android:icon="@drawable/ic_terrain"
                    android:title="@string/heightmap" />
                <item
                    android:id="@+id/nav_overworld_biome"
                    android:icon="@drawable/ic_bubble_chart"
                    android:title="@string/biomes" />
                <item
                    android:id="@+id/nav_overworld_grass"
                    android:icon="@drawable/ic_gradient"
                    android:title="@string/foliage_color" />
                <item
                    android:id="@+id/nav_overworld_xray"
                    android:icon="@drawable/ic_visibility"
                    android:title="@string/x_ray" />
                <item
                    android:id="@+id/nav_overworld_block_light"
                    android:icon="@drawable/ic_settings_brightness"
                    android:title="@string/light" />
            </menu>
        </item>
    </group>

    <group android:checkableBehavior="none">
        <item android:title="@string/nether">
            <menu>
                <item
                    android:id="@+id/nav_nether_map"
                    android:icon="@drawable/ic_action_map_b"
                    android:title="@string/map" />
                <item
                    android:id="@+id/nav_nether_xray"
                    android:icon="@drawable/ic_visibility"
                    android:title="@string/x_ray" />
                <item
                    android:id="@+id/nav_nether_block_light"
                    android:icon="@drawable/ic_settings_brightness"
                    android:title="@string/light" />
            </menu>
        </item>
    </group>

    <group android:checkableBehavior="none">
        <item android:title="@string/the_end">
            <menu>
                <item
                        android:id="@+id/nav_end_satellite"
                        android:icon="@drawable/ic_satellite"
                        android:title="@string/satellite" />
                <item
                        android:id="@+id/nav_end_heightmap"
                        android:icon="@drawable/ic_terrain"
                        android:title="@string/heightmap" />
                <item
                        android:id="@+id/nav_end_block_light"
                        android:icon="@drawable/ic_settings_brightness"
                        android:title="@string/light" />
            </menu>
        </item>
    </group>

    <group android:checkableBehavior="none">
        <item android:title="@string/map_options">
            <menu>
                <item
                    android:id="@+id/nav_map_opt_toggle_grid"
                    android:icon="@drawable/ic_grid_on"
                    android:title="@string/toggle_grid" />
                <item
                    android:id="@+id/nav_map_opt_toggle_markers"
                    android:icon="@drawable/ic_place"
                    android:title="@string/toggle_markers" />
                <item
                    android:id="@+id/nav_map_opt_filter_markers"
                    android:icon="@drawable/ic_action_filter"
                    android:title="@string/filter_markers" />
            </menu>
        </item>
    </group>

    <group android:checkableBehavior="none">
        <item android:title="@string/advanced_options">
            <menu>
                <item
                    android:id="@+id/nav_biomedata_nbt"
                    android:icon="@drawable/ic_action_list"
                    android:title="@string/biomedata_nbt" />
                <item
                    android:id="@+id/nav_overworld_nbt"
                    android:icon="@drawable/ic_action_list"
                    android:title="@string/overworld_nbt" />
                <item
                    android:id="@+id/nav_villages_nbt"
                    android:icon="@drawable/ic_action_list"
                    android:title="@string/villages_nbt" />
                <item
                    android:id="@+id/nav_portals_nbt"
                    android:icon="@drawable/ic_action_list"
                    android:title="@string/portals_nbt" />
                <item
                    android:id="@+id/nav_dimension0_nbt"
                    android:icon="@drawable/ic_action_list"
                    android:title="@string/dimension0_nbt" />
                <item
                    android:id="@+id/nav_dimension1_nbt"
                    android:icon="@drawable/ic_action_list"
                    android:title="@string/dimension1_nbt" />
                <item
                    android:id="@+id/nav_dimension2_nbt"
                    android:icon="@drawable/ic_action_list"
                    android:title="@string/dimension2_nbt" />
                <item
                    android:id="@+id/nav_autonomous_entities_nbt"
                    android:icon="@drawable/ic_action_list"
                    android:title="@string/autonomousentities_nbt" />
                <item
                    android:id="@+id/nav_open_nbt_by_name"
                    android:icon="@drawable/ic_action_search"
                    android:title="@string/open_nbt_by_name" />
            </menu>
        </item>
    </group>


</menu>
